# sqltest

./: README.md  pyproject.toml
sqltest/: cli.py  funcs.py  models.py  runner.py  utils.py
tests/: conftest.py  test_funcs.py  test_models.py
